<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_klik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nama_batik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_batik" />

            <TextView
                android:id="@+id/tv_daerah_batik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daerah_batik" />

            <TextView
                android:id="@+id/tv_makna_batik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/makna_batik" />

            <TextView
                android:id="@+id/tv_harga_rendah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/harga_terendah_batik" />

            <TextView
                android:id="@+id/tv_harga_tinggi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harga_tertinggi_batik" />

            <TextView
                android:id="@+id/tv_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@color/colorPrimary" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>